--- a/templates/base.html
+++ b/templates/base.html
@@ -6,28 +6,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-slate-600 min-h-screen m-0 text-slate-300">
+  <body class="bg-slate-700 min-h-screen m-0 text-slate-300 flex flex-col justify-between">
     <div class="main my-3">
-      <!-- Navbar -->
-      <nav class="navbar px-7 py-2 bg-neutral-900 h-60 flex flex-row items-center justify-between">
-          <div class="personal flex flex-col ml-5 space-y-2">
-            <h1 class="text-4xl font-bold">Paweł Stawikowski</h1>
-            <span>Junior Fullstack Developer</span>
-            <div class="flex flex-row links space-x-3">
-              <span class="item github rounded-full bg-gray-500 p-2 text-xl hover:bg-gray-400 text-gray-100 hover:text-gray-50"><i class="fa-brands fa-github"></i></span>
-              <span class="item github rounded-full bg-">linkedin icon</span>
-            </div>
-          </div>
-          <div class="contact">
-            telegram
-          </div>
-      </nav>
+      {% block content %}{% endblock %}
 
-      <!-- Welcome -->
-      <div class="welcome flex flex-col items-center">
-        <span></span>
-      </div>
     </div>
+
+    <footer class="bg-neutral-800 p-6 text-center">
+      <span>Created by Paweł Stawikowski</span>
+    </footer>
 
 
   </body>
