Header in every box

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class="latest-projects box">
-          <h2>latest projects</h2>
+          <p class="text-xl pb-1 font-bold tracking-wide font-sans">Latest projects</p>
           <div>
             project no. 1
             <span>title</span>
@@ -48,7 +48,7 @@
           </div>
         </div>
         <div class="other-projects box">
-          <h2>other projects</h2>
+          <p class="text-xl pb-1 font-bold tracking-wide font-sans">Other projects</p>
           <div class="side-project">
             <a href="#">project name</a>
             <p>short description</p>
@@ -56,7 +56,7 @@
           </div>
         </div>
         <div class="experience box">
-          <h2>work experience</h2>
+          <p class="text-xl pb-1 font-bold tracking-wide font-sans">Works experience</p>
           <div class="experience-position">
             <p>fullstack developer - company name (start_year - now)</p>
             <p>short desc what am i doing</p>
@@ -68,11 +68,12 @@
 
       <div class="sidebar w-1/4">
         <div class="info box">
+          <p class="text-xl pb-1 font-bold tracking-wide font-sans">Personal info</p>
           <p>adres</p>
           <p>email</p>
         </div>
         <div class="skills box">
-          <h2 class="mb-2">skills</h2>
+          <p class="text-xl pb-1 font-bold tracking-wide font-sans">Skills</p>
           <div class="skill">
             <div class="flex flex-row justify-between">
               <span>language</span>
@@ -84,16 +85,16 @@
           </div>
         </div>
         <div class="education box">
-          <h2>education</h2>
+          <p class="text-xl pb-1 font-bold tracking-wide font-sans">Education</p>
           <p>degree</p>
           <p>school name (yyyy-yyyy)</p>
         </div>
         <div class="languages box">
-          <h2>languages</h2>
+          <p class="text-xl pb-1 font-bold tracking-wide font-sans">Languages</p>
           <p>language: level [stars]</p>
         </div>
         <div class="currently-learn box">
-          <h2>currently learning</h2>
+          <p class="text-xl pb-1 font-bold tracking-wide font-sans">Currently studying</p>
           <ul>
             <li>react</li>
             <li>tailwind</li>
