--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
           </div>
         </div>
         <div class="experience box">
-          <p class="text-xl pb-1 font-bold tracking-wide font-sans">Works experience</p>
+          <p class="text-xl pb-1 font-bold tracking-wide font-sans">Work experience</p>
           <div class="experience-position">
             <p>fullstack developer - company name (start_year - now)</p>
             <p>short desc what am i doing</p>
