Social icons finish, Social model register, small footer change

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,13 +7,13 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-slate-700 min-h-screen m-0 text-slate-300 flex flex-col justify-between">
-    <div class="main my-3">
+    <div class="main">
       {% block content %}{% endblock %}
 
     </div>
 
     <footer class="bg-neutral-800 p-6 text-center">
-      <span>Created by Paweł Stawikowski</span>
+      <span>Created by Paweł Stawikowski with <a class="text-blue-500" href="https://github.com/Pawikoski/portfolio">Portfolio</a></span>
     </footer>
 
 
