--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,23 @@
   </head>
   <body class="bg-slate-700 min-h-screen m-0 text-slate-300 flex flex-col justify-between">
     <div class="main">
+      <!-- Header -->
+      <nav class="navbar px-16 py-2 bg-neutral-800 h-60 flex flex-row items-center justify-between">
+        <div class="personal flex flex-col ml-5 space-y-2">
+          <h1 class="text-4xl font-bold">Paweł Stawikowski</h1>
+          <span>Junior Fullstack Developer</span>
+          <div class="flex flex-row links space-x-3">
+            {% for social in socials %}
+            <a title="{{ social.name }}" target="_blank" href="{{ social.url }}" class="item rounded-full bg-gray-500 p-2 text-xl hover:bg-gray-400 text-gray-100 hover:text-gray-50">{{ social.icon|safe }}</a>
+            {% endfor %}
+          </div>
+        </div>
+        <div class="contact">
+          <div>{{ contact.mail }}</div>
+          <div>{{ contact.telegram }}</div>
+          <div>{{ contact.skype }}</div>         
+        </div>
+      </nav>
       {% block content %}{% endblock %}
 
     </div>
