--- a/templates/index.html
+++ b/templates/index.html
@@ -111,6 +111,14 @@
       </ul>
     </div>
 
+    <div class="credits box">
+      <p class="text-xl pb-1 font-bold tracking-wide font-sans">Credits</p>
+
+      <p>tailwind</p>
+      <p>fontawesome</p>
+      etc.
+    </div>
+
   </div>
 </div>
 {% endblock %}
