Credit model register, data from credit model in views and template

--- a/templates/index.html
+++ b/templates/index.html
@@ -113,10 +113,9 @@
 
     <div class="credits box">
       <p class="text-xl pb-1 font-bold tracking-wide font-sans">Credits</p>
-
-      <p>tailwind</p>
-      <p>fontawesome</p>
-      etc.
+      {% for credit in credits %}
+      <p><a href="{{ credit.url }}">{{ credit.name }}</a></p>
+      {% endfor %}
     </div>
 
   </div>
