--- a/templates/base.html
+++ b/templates/base.html
@@ -25,14 +25,77 @@
           <div>{{ contact.skype }}</div>         
         </div>
       </nav>
+      
+      <div class="container md flex lg:flex-row mx-auto justify-between lg:space-x-7 lg:my-5 sm:flex-col sm:space-x-0 sm:my-1">
+        
+      <!-- Main -->
       {% block content %}{% endblock %}
 
+      <!-- Sidebar -->
+      <div class="sidebar lg:w-1/4 sm:w-full">
+        <div class="info box">
+          <p class="text-xl pb-1 font-bold tracking-wide font-sans">Personal info</p>
+          <p class="font-semibold">{{ personal_data.location }}</p>
+          <p class="text-blue-400"><a href="mailto:{{ personal_data.email }}">{{ personal_data.email }}</a></p>
+          <p class="text-blue-400"><a href="{{ personal_data.cv }}">Download CV</a></p>
+          <p class="text-blue-400"><a href="{{ personal_data.contact_form }}">Contact form</a></p>
+        </div>
+        <div class="skills box">
+          <p class="text-xl pb-1 font-bold tracking-wide font-sans">Skills</p>
+          {% for skill in skills %}
+          <div class="skill my-3">
+            <div class="flex flex-row justify-between">
+              <span>{{ skill.language }}</span>
+              <span>level</span>
+            </div>
+            <div class="progress-bar bg-slate-700 w-full h-3">
+              <div class="progress-green w-{{ skill.level }}/12 bg-green-500 h-full"></div>
+            </div>
+          </div>
+          {% endfor %}
+        </div>
+        <div class="education box">
+          <p class="text-xl pb-1 font-bold tracking-wide font-sans">Education</p>
+          {% for obj in education %}
+          <div class="py-1">
+            <p class="text-lg font-semibold">{{ obj.degree }}</p>
+            <p class="text-blue-400 font-semibold"><a href="{{ obj.website }}">{{ obj.name }}</a></p>
+            <p>{{ obj.start_date|date:"Y" }} - {% if obj.still_learning %}now{% else %}{{ obj.graduate_date|date:"Y" }}{% endif %}</p>
+          </div>
+          {% endfor %}
+        </div>
+        <div class="languages box">
+          <p class="text-xl pb-1 font-bold tracking-wide font-sans">Languages</p>
+          {% for language in languages %}
+          <div class="flex justify-between space-y-3 items-baseline">
+            <p>{{ language.name }}</p>
+            <p class=" text-yellow-300">{% for _ in language.full_stars %}<i class="fa-solid fa-star"></i>{% endfor %}{% for _ in language.blank_stars %}<i class="fa-regular fa-star"></i>{% endfor %}</p>
+          </div>
+          {% endfor %}
+        </div>
+        <div class="currently-learn box">
+          <p class="text-xl pb-1 font-bold tracking-wide font-sans">Currently studying</p>
+          <ul class="list-disc pl-4">
+            {% for item in currently_studying %}
+            <li>{{ item.name }}</li>
+            {% endfor %}
+          </ul>
+        </div>
+
+        <div class="credits box">
+          <p class="text-xl pb-1 font-bold tracking-wide font-sans">Credits</p>
+          {% for credit in credits %}
+          <p><a href="{{ credit.url }}">{{ credit.name }}</a></p>
+          {% endfor %}
+        </div>
+      </div>
+
     </div>
+  </div>
 
-    <footer class="bg-neutral-800 p-6 text-center">
-      <span>Created by Paweł Stawikowski with <a class="text-blue-500" href="https://github.com/Pawikoski/portfolio">Portfolio</a></span>
-    </footer>
-
+  <footer class="bg-neutral-800 p-6 text-center">
+    <span>Created by Paweł Stawikowski with <a class="text-blue-500" href="https://github.com/Pawikoski/portfolio">Portfolio</a></span>
+  </footer>
 
   </body>
 </html>
