--- a/templates/base.html
+++ b/templates/base.html
@@ -48,14 +48,14 @@
       <!-- Sidebar -->
       <div class="sidebar w-full lg:w-1/4 ">
         <div class="info box">
-          <p class="text-xl pb-1 font-bold tracking-wide font-sans">Personal info</p>
+          <p class="text-xl pb-1 font-bold tracking-wide font-sans">{{ translations.personal_info }}</p>
           <p class="font-semibold">{{ personal_data.location }}</p>
           <p class="text-blue-400"><a href="mailto:{{ personal_data.email }}">{{ personal_data.email }}</a></p>
           <p class="text-blue-400"><a href="{{ personal_data.cv }}">Download CV</a></p>
           <p class="text-blue-400"><a href="{{ personal_data.contact_form }}">Contact form</a></p>
         </div>
         <div class="skills box">
-          <p class="text-xl pb-1 font-bold tracking-wide font-sans">Skills</p>
+          <p class="text-xl pb-1 font-bold tracking-wide font-sans">{{ translations.skills }}</p>
           {% for skill in skills %}
           <div class="skill my-3">
             <div class="flex flex-row justify-between">
@@ -69,7 +69,7 @@
           {% endfor %}
         </div>
         <div class="education box">
-          <p class="text-xl pb-1 font-bold tracking-wide font-sans">Education</p>
+          <p class="text-xl pb-1 font-bold tracking-wide font-sans">{{ translations.education }}</p>
           {% for obj in education %}
           <div class="py-1">
             <p class="text-lg font-semibold">{{ obj.degree }}</p>
@@ -79,7 +79,7 @@
           {% endfor %}
         </div>
         <div class="languages box">
-          <p class="text-xl pb-1 font-bold tracking-wide font-sans">Languages</p>
+          <p class="text-xl pb-1 font-bold tracking-wide font-sans">{{ translations.languages }}</p>
           {% for language in languages %}
           <div class="flex justify-between space-y-3 items-baseline">
             <p>{{ language.name }}</p>
@@ -88,7 +88,7 @@
           {% endfor %}
         </div>
         <div class="currently-learn box">
-          <p class="text-xl pb-1 font-bold tracking-wide font-sans">Currently studying</p>
+          <p class="text-xl pb-1 font-bold tracking-wide font-sans">{{ translations.currently_studying }}</p>
           <ul class="list-disc pl-4">
             {% for item in currently_studying %}
             <li>{{ item.name }}</li>
@@ -97,7 +97,7 @@
         </div>
 
         <div class="credits box">
-          <p class="text-xl pb-1 font-bold tracking-wide font-sans">Credits</p>
+          <p class="text-xl pb-1 font-bold tracking-wide font-sans">{{ translations.credits }}</p>
           {% for credit in credits %}
           <p><a href="{{ credit.url }}">{{ credit.name }}</a></p>
           {% endfor %}
