--- a/templates/select_language.html
+++ b/templates/select_language.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="flex justify-center items-center h-screen flex-col">
-        <p class="block mb-2 text-3xl font-medium text-gray-900 dark:text-gray-400">Select language</p>
+        <p class="block mb-2 text-3xl font-medium text-gray-900 dark:text-gray-400">{{ translations.select_language }}</p>
 
         <form action="{% url 'select_language' %}" method="post">
         {% csrf_token %}
