--- a/templates/base.html
+++ b/templates/base.html
@@ -59,8 +59,8 @@
           {% for skill in skills %}
           <div class="skill my-3">
             <div class="flex flex-row justify-between">
-              <span>{{ skill.language }}</span>
-              <span>level</span>
+              <span>{{ skill.name }}</span>
+              <span>level TODO:</span>
             </div>
             <div class="progress-bar bg-slate-700 w-full h-3">
               <div class="progress-green w-{{ skill.level }}/12 bg-green-500 h-full"></div>
