--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
           {% for skill in skills %}
           <div class="skill my-3">
             <div class="flex flex-row justify-between">
-              <span>{{ skill.name }}</span>
+              <span>{{ skill.technology }}</span>
               <span>level TODO:</span>
             </div>
             <div class="progress-bar bg-slate-700 w-full h-3">
